# terminal-video-chat

./: Cargo.toml  README.md
.github/workflows/: rust.yml
client/: Cargo.toml  README.md
client/data/: db.json
client/src/: main.rs  util.rs
server/: Cargo.toml
server/src/: main.rs
