[package]
name = "terminal-video-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0", default-features = false, features = ["std"] }
tui = { version = "0.18", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
viuer = "0.6"
image = "0.24"
tui-image = "0.2.0"
nokhwa = "0.9.4"
rscam = "0.5.5"
