[package]
name = "terminal-video-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = { version = "0", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
bincode = "1"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.2", default-features = false, features = ["std"] }
tui = { version = "0.18", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
viuer = "0.6"
image = "*"
# tui-image = "0.2.0"
tui-image = { path = "./tui-image" }
# nokhwa = { version = "0.9.4", features = ["input-v4l", "default", "output-threaded"] }
rscam = "0.5.5"
textwrap = "0.15"
